[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scenes/ui/members/members_interface_controller.gd" id="1_members_ctrl"]
[ext_resource type="Theme" uid="uid://cpdx7u62cktq6" path="res://assets/themes/ui_theme.tres" id="2_theme"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_opaque_panel"]
bg_color = Color(0.12, 0.14, 0.18, 1.0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.25, 0.28, 0.35, 1.0)
corner_radius_left = 4
corner_radius_top = 4
corner_radius_right = 4
corner_radius_bottom = 4

[node name="MembersInterface" type="CanvasLayer"]
layer = 10
script = ExtResource("1_members_ctrl")

[node name="MembersPanel" type="PanelContainer" parent="."]
theme = ExtResource("2_theme")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_opaque_panel")

[node name="MarginContainer" type="MarginContainer" parent="MembersPanel"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MembersPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Header" type="HBoxContainer" parent="MembersPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="HeaderLabel" type="Label" parent="MembersPanel/MarginContainer/VBoxContainer/Header"]
unique_name_in_owner = true
layout_mode = 2
text = "MEMBERS"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="MembersPanel/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HintLabel" type="Label" parent="MembersPanel/MarginContainer/VBoxContainer/Header"]
unique_name_in_owner = true
layout_mode = 2
text = "A: Select | B: Close"
horizontal_alignment = 2
modulate = Color(0.6, 0.6, 0.7, 1)

[node name="HSeparator" type="HSeparator" parent="MembersPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ScreenContainer" type="Control" parent="MembersPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="InputBlocker" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
color = Color(0, 0, 0, 0.3)
